Tried to change the changNavBar function, added another image file for the website

--- a/project_handCraft.html
+++ b/project_handCraft.html
@@ -65,10 +65,11 @@
             </div>
             <div class="image-gallery">
                 <!--Finish the image gallery css -->
+                <img src="./pictures/Sketch 5.png" alt="picure4">
                 <img src="./pictures/filia_happy.png" alt="picture1">
                 <img src="./pictures/project_Jinx.png" alt="picture2">
                 <img src="./pictures/Fin_lofiGirl.png" alt="picture3">
-                <img src="./pictures/256349369_1091545141585591_4247379099015110296_n.png" alt="picure4">
+                
             </div>
         </section>
 
