--- a/project_handCraft.html
+++ b/project_handCraft.html
@@ -36,11 +36,11 @@
             <!-- REDO THE HOVER EFFECTS TO LOOK LIKE CORY HUGHART, BUT NOT TO WORK LIKE HIS-->
                     <!-- Add a circle Background element when the div in question is on screen -->
             <nav>
-                <a href="#home" class="banner">Home</a>
-                <a href="#portfolio" class="banner">Portfolio</a>
-                <a href="#about" class="banner">About</a>
-                <a href="#contact" class="banner">Contact Page</a>
-                <a href="#terms-and-services" class="banner">Terms of Service</a>
+                <a href="./project_handCraft.html#home" class="banner">Home</a>
+                <a href="./project_handCraft-PortfolioPg.html#port-page" class="banner">Portfolio</a>
+                <a href="./project_handCraft-AboutPg.html" class="banner">About</a>
+                <a href="./project_handCraft-ContactPg.html#contact" class="banner">Contact Page</a>
+                <a href="./project_handCraft-ContactPg.html#tos" class="banner">Terms of Service</a>
             </nav>
         </div>
 
@@ -61,7 +61,7 @@
                         And so, with that, I hope you enjoy scrolling through this small project of mine
                         called Project Handcraft! :)
                     </p>
-                   <p class="content-link"><a href="">see more about project handcraft</a></p> 
+                   <p class="content-link"><a href="./project_handCraft-AboutPg.html">see more about project handcraft</a></p> 
                     
                 </div>
                 
@@ -96,7 +96,7 @@
                         justo donec enim diam vulputate.
                     </p>
 
-                    <p class="content-link"><a href="">see more of my art!</a></p>
+                    <p class="content-link"><a href="./project_handCraft-PortfolioPg.html#port-page">see more of my art!</a></p>
 
                 </div>
             </div>
