--- a/project_handCraft-ContactPg.html
+++ b/project_handCraft-ContactPg.html
@@ -38,16 +38,16 @@
                     <!-- Add a circle Background element when the div in question is on screen -->
             <nav>
                 <!-- Add a drop shadow for the top section -->
-                <a href="#home" class="banner">Home</a>
-                <a href="#portfolio" class="banner">Portfolio</a>
+                <a href="./project_handCraft.html#home" class="banner">Home</a>
+                <a href="./project_handCraft-PortfolioPg.html#port-page" class="banner">Portfolio</a>
                 <a href="#about" class="banner">About</a>
                 <a href="#contact" class="banner">Contact Page</a>
-                <a href="#terms-and-services" class="banner">Terms of Service</a>
+                <a href="#tos" class="banner">Terms of Service</a>
             </nav>
         </div>
 
         <a  name="contact"></a>
-        <section class="contact-page alt-content">
+        <section class="contact-page alt-content" id="contact">
             <div class="text-box cont-page">
                 <div class="text text-form">
                     <!--Add bounce animation and a special bounce and down animation to the
@@ -92,8 +92,9 @@
                     </form>
                 </div>  
           </div>
+         
           <div class="text-box terms-of-service">
-            
+            <a id="tos"></a>
                  <p>
                     <ol> <h2 class="cont-header">Terms of Service</h2>
                         <h3>LOREM IPSUM</h3>
