preliminary wiring part 2

--- a/project_handCraft-ContactPg.html
+++ b/project_handCraft-ContactPg.html
@@ -40,7 +40,7 @@
                 <!-- Add a drop shadow for the top section -->
                 <a href="./project_handCraft.html#home" class="banner">Home</a>
                 <a href="./project_handCraft-PortfolioPg.html#port-page" class="banner">Portfolio</a>
-                <a href="#about" class="banner">About</a>
+                <a href="./project_handCraft-AboutPg.html" class="banner">About</a>
                 <a href="#contact" class="banner">Contact Page</a>
                 <a href="#tos" class="banner">Terms of Service</a>
             </nav>
