wirings, restructurings, and minor changes
wired many of the loose ends together so that everything is in order. (basically put urls to the links of each page)

changed the about section in the home page to be better fitting

changed the gallery in the portfolio section to be an actual useful gallery

changed the color scheme so that it's better to look at. although it's big shift in aesthetics to me, it's a better read for my eyes and better colors

(also added a code archive for disused snippets of html and css)

--- a/project_handCraft-PortfolioPg.html
+++ b/project_handCraft-PortfolioPg.html
@@ -38,9 +38,9 @@
                     <!-- Add a circle Background element when the div in question is on screen -->
             <nav>
                 <!-- Add a drop shadow for the top section -->
-                <a href="./project_handCraft.html#home" class="banner">Home</a>
-                <a href="#gallery" class="banner">Portfolio</a>
-                <a href="./project_handCraft-AboutPg.html" class="banner">About</a>
+                <a href="./project_handCraft.html#top" class="banner">Home</a>
+                <a href="./project_handCraft-PortfolioPg.html#port-page" class="banner">Portfolio</a>
+                <a href="./project_handCraft-AboutPg.html#about" class="banner">About</a>
                 <a href="./project_handCraft-ContactPg.html#contact" class="banner">Contact Page</a>
                 <a href="./project_handCraft-ContactPg.html#tos" class="banner">Terms of Service</a>
             </nav>
@@ -83,7 +83,7 @@
 
         <div class="tri-column">
 
-            <div class="text alttxt">
+            <div class="text">
                 <img src="./pictures/Liz4.png" alt="">
                 <h2 class="cont-header">Anime Pixel Art!</h2>
                 <p>
@@ -95,7 +95,7 @@
                     at magnam veniam soluta modi!
                 </p>
             </div>
-            <div class="text alttxt">
+            <div class="text">
                 <img src="./pictures/Taiga 5 - final.png" alt="">
                 <h2 class="cont-header">Anime Character Art!</h2>
                 <p>
@@ -107,7 +107,7 @@
                     at magnam veniam soluta modi!
                 </p>
             </div>
-            <div class="text alttxt">
+            <div class="text">
                 <img src="./pictures/Noelle Finished.png" alt="">
                 <h2 class="cont-header">Full Character Illustrations!</h2>
                 <p>
@@ -162,24 +162,23 @@
                     <!-- REPLACE WITH GITHUB, TWITTER, AND GMAIL LOGOS -->  
                     <!-- REPLACE THE POSITION OF THE DIVIDING SLASHES TO BE CENTERED ON THE LOGOS. -->  
                 <div class="social-media">
-                    <a href="https://twitter.com/km_func" target="_blank"><img src="./pictures/Jes upsized.png" alt="animated-Gif"></a>
+                    <a href="https://github.com/KM-func" target="_blank"><img src="./pictures/gitHub logo.png" alt="animated-Gif"></a>
                     <p class="divider">/</p>
-                    <a href="" target="_blank"><img src="./pictures/Liz upsized.png" alt="animated-Gif"></a>
+                    <a href="https://www.linkedin.com/in/karl-mark-funcion-75bb50213/" target="_blank"><img src="./pictures/linkdin logo.png" alt="animated-Gif"></a>
                     <p class="divider">/</p>
-                    <a href="https://github.com/KM-func" target="_blank"><img src="./pictures/Jes upsized.png" alt="animated-Gif"></a>
+                    <a href="https://twitter.com/km_func" target="_blank"><img src="./pictures/twitter logo.png" alt="animated-Gif"></a>
                     <p class="divider">/</p>
-                    <a href="" target="_blank"><img src="./pictures/Liz upsized.png" alt="animated-Gif"></a>
+                    <a href="https://www.facebook.com/karlmark1889/" target="_blank"><img src="./pictures/fb logo.png" alt="animated-Gif"></a>
                 </div>                                   
 
 
                 <!-- THESE ARE TEMPORARY LINKS, EACH LINK WILL HAVE A PROPER PAGE-->
                 <div class="foot-links">
-                        <h3 class="foot-link"> <a href="#contact"> terms of service </a> </h3>
-                        <h3 class="foot-link"> <a href="#portfolio"> portfolio </a> </h3>
-                        <h3 class="foot-logo"> <a href="#top"> Project_Handcraft </a> </h3>
-                        <h3 class="foot-link"> <a href="#about"> about </a> </h3>
-                        <h3 class="foot-link"> <a href="#contact"> contact me </a> </h3>
-
+                    <h3 class="foot-link"> <a href="./project_handCraft-ContactPg.html#tos"> terms of service </a> </h3>
+                    <h3 class="foot-link"> <a href="./project_handCraft-PortfolioPg.html#port-page"> portfolio </a> </h3>
+                    <h3 class="foot-logo"> <a href="./project_handCraft.html#top"> Project_Handcraft </a> </h3>
+                    <h3 class="foot-link"> <a href="./project_handCraft-AboutPg.html#abt-page"> about </a> </h3>
+                    <h3 class="foot-link"> <a href="./project_handCraft-ContactPg.html#contact"> contact me </a> </h3>
                 </div>
             </div>
         </div>
