--- a/project_handCraft-ContactPg.html
+++ b/project_handCraft-ContactPg.html
@@ -38,7 +38,7 @@
                     <!-- Add a circle Background element when the div in question is on screen -->
             <nav>
                 <!-- Add a drop shadow for the top section -->
-                <a href="./project_handCraft.html#top" class="banner">Home</a>
+                <a href="./index.html#top" class="banner">Home</a>
                 <a href="./project_handCraft-PortfolioPg.html#port-page" class="banner">Portfolio</a>
                 <a href="./project_handCraft-AboutPg.html#about" class="banner">About</a>
                 <a href="./project_handCraft-ContactPg.html#contact" class="banner">Contact Page</a>
@@ -162,7 +162,7 @@
                 <div class="foot-links">
                     <h3 class="foot-link"> <a href="./project_handCraft-ContactPg.html#tos"> terms of service </a> </h3>
                     <h3 class="foot-link"> <a href="./project_handCraft-PortfolioPg.html#port-page"> portfolio </a> </h3>
-                    <h3 class="foot-logo"> <a href="./project_handCraft.html#top"> Project_Handcraft </a> </h3>
+                    <h3 class="foot-logo"> <a href="./index.html#top"> Project_Handcraft </a> </h3>
                     <h3 class="foot-link"> <a href="./project_handCraft-AboutPg.html#abt-page"> about </a> </h3>
                     <h3 class="foot-link"> <a href="./project_handCraft-ContactPg.html#contact"> contact me </a> </h3>
                 </div>
