--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- REDO THE HOVER EFFECTS TO LOOK LIKE CORY HUGHART, BUT NOT TO WORK LIKE HIS-->
                     <!-- Add a circle Background element when the div in question is on screen -->
             <nav>
-                <a href="./project_handCraft.html#top" class="banner">Home</a>
+                <a href="./index.html#top" class="banner">Home</a>
                 <a href="./project_handCraft-PortfolioPg.html#port-page" class="banner">Portfolio</a>
                 <a href="./project_handCraft-AboutPg.html#about" class="banner">About</a>
                 <a href="./project_handCraft-ContactPg.html#contact" class="banner">Contact Page</a>
@@ -206,7 +206,7 @@
                 <div class="foot-links">
                     <h3 class="foot-link"> <a href="./project_handCraft-ContactPg.html#tos"> terms of service </a> </h3>
                     <h3 class="foot-link"> <a href="./project_handCraft-PortfolioPg.html#port-page"> portfolio </a> </h3>
-                    <h3 class="foot-logo"> <a href="./project_handCraft.html#top"> Project_Handcraft </a> </h3>
+                    <h3 class="foot-logo"> <a href="./index.html#top"> Project_Handcraft </a> </h3>
                     <h3 class="foot-link"> <a href="./project_handCraft-AboutPg.html#abt-page"> about </a> </h3>
                     <h3 class="foot-link"> <a href="./project_handCraft-ContactPg.html#contact"> contact me </a> </h3>
                 </div>
